--- a/k8s-manifests/frontend/deployment.yaml
+++ b/k8s-manifests/frontend/deployment.yaml
@@ -25,7 +25,7 @@ spec:
       - name: ecr-registry-secret
       containers:
       - name: frontend
-        image: 244736874175.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest
+        image: 244736874175.dkr.ecr.ap-south-1.amazonaws.com/frontend:3
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
