--- a/k8s-manifests/backend/deployment.yaml
+++ b/k8s-manifests/backend/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata: 
   name: api
-  namespace: three-tier
+  namespace: k8s-noufa
   labels: 
     role: api
     env: demo
