--- a/k8s-manifests/backend/service.yaml
+++ b/k8s-manifests/backend/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api
-  namespace: three-tier
+  namespace: k8s-noufa
 spec: 
   ports:
   - port: 8000
