--- a/k8s-manifests/database/deployment.yaml
+++ b/k8s-manifests/database/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata: 
-  namespace: three-tier
+  namespace: k8s-noufa
   name: postgres
 spec: 
   replicas: 1
