--- a/k8s-manifests/database/secrets.yaml
+++ b/k8s-manifests/database/secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata: 
-  namespace: three-tier
+  namespace: k8s-noufa
   name: postgres-sec
 type: Opaque
 data:  
