--- a/k8s-manifests/frontend-ingress/frontend-ingress.yaml
+++ b/k8s-manifests/frontend-ingress/frontend-ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: frontend-ingress
-  namespace: three-tier
+  namespace: k8s-noufa
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
