--- a/k8s-manifests/frontend/service.yaml
+++ b/k8s-manifests/frontend/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata: 
   name: frontend
-  namespace: three-tier
+  namespace: k8s-noufa
 spec:
   ports:
   - port: 3000
