--- a/k8s-manifests/database/pv.yaml
+++ b/k8s-manifests/database/pv.yaml
@@ -2,11 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: postgres-pv
-<<<<<<< HEAD
   namespace: k8s-noufa
-=======
-  namespace: three-tier
->>>>>>> 6b649c652bfd80d29a2015ee5471aab600141031
 spec:
   capacity: 
     storage: 1Gi
@@ -14,4 +10,5 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /data/postgres # Update path for PostgreSQL
+    path: /data/postgres
+
