Cleaned final DevSecOps EKS Terraform project with all updated YAMLs

--- a/k8s-manifests/database/secrets.yaml
+++ b/k8s-manifests/database/secrets.yaml
@@ -1,13 +1,10 @@
 apiVersion: v1
 kind: Secret
-metadata: 
-<<<<<<< HEAD
-  namespace: k8s-noufa
-=======
-  namespace: three-tier
->>>>>>> 6b649c652bfd80d29a2015ee5471aab600141031
+metadata:
   name: postgres-sec
+  namespace: k8s-noufa  
 type: Opaque
-data:  
-  password: c2RmdnNuZnNmc3NzMjQz # Replace with actual base64-encoded password
-  username: YWRtaW4= # Replace with actual base64-encoded username
+data:
+  username: YWRtaW4=           
+  password: c2RmdnNuZnNmc3NzMjQz  
+
