Updated backend Ingress to api.dovz.online

--- a/k8s-manifests/backend-ingress/backend-ingress.yaml
+++ b/k8s-manifests/backend-ingress/backend-ingress.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    - host: api.dovz.shop
+    - host: api.dovz.online
       http:
         paths:
           - path: /api
@@ -20,3 +20,4 @@ spec:
                 name: api
                 port:
                   number: 8000
+
