--- a/k8s-manifests/backend-ingress/backend-ingress.yaml
+++ b/k8s-manifests/backend-ingress/backend-ingress.yaml
@@ -13,7 +13,7 @@ spec:
     - host: api.dovz.online
       http:
         paths:
-          - path: /api
+          - path: /
             pathType: Prefix
             backend:
               service:
