🔥 Fixed frontend ingress for www.dovz.online routing

--- a/k8s-manifests/frontend-ingress/frontend-ingress.yaml
+++ b/k8s-manifests/frontend-ingress/frontend-ingress.yaml
@@ -7,6 +7,9 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
+    alb.ingress.kubernetes.io/backend-protocol: HTTP
+    alb.ingress.kubernetes.io/success-codes: "200-499"
+    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http.drop_invalid_header_fields.enabled=true
 spec:
   ingressClassName: alb
   rules:
